# phaers-spaceshooter

./: .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  docker-compose.yml  docker_run.sh  game.sh  generate.sh  index.html  package.json  style.css  targets.js  webpack.config.js  webpack.mix.js
.github/workflows/: linux.yml  ubuntu-desktop.yml  webassembly.yml
cmake/: DragonBones.cmake  FindSDL2.cmake  ImGui.cmake  SDL2.cmake  UpdateResources.cmake
docker/: app.env  nginx.docker  node.docker  php-cli.docker  php-fpm.docker  ubuntu.docker
docker/crontabs/: php-cli.crontab
docker/nginx/: api.conf  emcc.conf  game.conf  laravel.conf
docker/php-fpm/: default_php.ini
docker/php-fpm/conf/: prod_php.ini
docker/scripts/: build_in_container.sh  do-after-change.sh  prepare_project.sh  symlink.sh
docs/: EXAMPLES.md  UTILITIES.md
example_simple_draw/: index.html  main.data  main.js  style.css
example_simple_draw/data/nodes/testScene/: testNode.json
example_simple_draw/data/properties/testScene/: testNode.json
lib/macOS/: install.sh
lib/win32/: install.sh
resources/: targets.js  webpack.config.js
resources/TestNodeSystem/data/nodes/gtest/: nodeWithChilds.json  simpleNode.json
resources/_stub/: blank_index.html  index.html  style.css
resources/data/nodes/: mainMenu.json
resources/data/nodes/gtest/: nodeWithChilds.json
resources/data/nodes/scenes/: mainMenu.json
resources/data/nodes/testScene/: testNode.json
resources/data/nodes/windows/: popup.json
resources/data/properties/gtest/: simpleNode.json
resources/data/properties/testScene/: testNode.json
resources/js/: game.js
resources/js/examples/: runFibonacci.js
resources/stub/: index.html  style.css
src/: CMakeLists.txt  canvas.c  enemy_ship.cpp  game.hpp  main.cpp  main_img.cpp  player_ship.cpp  projectile.cpp  projectile_pool.cpp
src/Core/: Application.cpp  Application.h  GameApplication.cpp  GameApplication.h  GlError.cpp  GlError.h  moduleDefinitions.h
src/Core/Components/: AllComponentsHeaders.h  Animation.h  CameraComponent.h  ColliderComponent.h  CollisionDetection.h  Component.h  ECS.h  KeyboardController.h  NodeManager.cpp  NodeManager.h  NodeManagerInstance.cpp  NodeManagerInstance.h  SpriteComponent.h  TouchController.h  TransformComponent.h
src/Core/DataTypes/: Vector2D.cpp  Vector2D.h
src/Core/Debug/: ImGuiLoader.h  Logger.cpp  Logger.h  imgui_sdl.cpp  imgui_sdl.h
src/Core/Debug/ImGui/: ImGuiManager.cpp  ImGuiManager.h
src/Core/Debug/ImGui/SDLImplements/: imgui_sdl.cpp  imgui_sdl.h
src/Core/Devices/: DevicesManager.cpp  DevicesManager.h
src/Core/DragonBones/: DBNode.h  DBTextureData.h  TGTextureData.h
src/Core/ECS/: AllComponentsHeaders.h  CameraComponent.h  ColliderComponent.h  CollisionDetection.h  ECS.cpp  ECS.h  KeyboardController.h  SpriteComponent.h  TouchController.h  TransformComponent.h
src/Core/Loaders/: JsonLoader.cpp  JsonLoader.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h
src/Core/Nodes/: Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  NodeManager.cpp  NodeManager.h  PropertyNode.cpp  PropertyNode.h
src/Core/ResourceModule/: ResourceManager.cpp  ResourceManager.h
src/Core/ResourceModule/Loaders/: JsonLoader.cpp  JsonLoader.h  TextureManager.cpp  TextureManager.h
src/Game/Interface/: InterfaceModule.cpp  InterfaceModule.h
src/Game/Scenes/: ScenesModule.cpp  ScenesModule.h
src/Game/StateModule/: StateManager.cpp  StateManager.h
src/boilerplate/: game.ts
src/boilerplate/assets/: pack.json  ref.txt
src/boilerplate/objects/: bird.ts  entity.ts  pipe.ts  player.ts  scrolling-background.ts
src/boilerplate/scenes/: boot-scene.ts  combat-scene.ts  game-scene.ts  main-menu-scene.ts
src/cheatsheet/: hello.c
src/depricated/: main2.cpp
src/depricated/Core/: Application.cpp  Game.cpp  Game.h  GameApplication.h  IApplication.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
src/depricated/Core/Debug/: ImGuiLoader.cpp
src/examples/: fibonacci.c  game_loop.c  sprite.c  sprite_animation.c  sprite_move.c  usesdl.c
src/examples/cheatsheet/: shell.c
stub/: canvas.css  shell.css  shell_file.html
stub/cheatsheet/: shell_file.html
tests/: CMakeLists.txt  TestJsonDeps.cpp  TestLevelLoad.cpp  TestNodeSystem.cpp  TestVector2D.cpp
